v0.9.41: fix raw html overflow

--- a/html/css/theme.css
+++ b/html/css/theme.css
@@ -27,6 +27,11 @@ body {
 	height: 20px;
 }
 
+.htmldiv{
+  overflow: auto;
+  margin: 10px;
+}
+
 .header-logo-url { float: left; }
 .header-logo-text { font-size: 32pt; }
 
